fix: Prescription all fields public — bypass Lombok AP fully
- Entity/DTO: all private→public (status, items, totalAmount, unitPrice, subtotal, etc.)
- Controller: direct field access (req.doctorId, req.clinicId)
- Service: no Lombok getters/setters — direct field access throughout
- Added missing clinicId to SaveRequest

Compiles ✅, MyBatis runtime error pending (port conflict with old binary)